add content to book subpage

--- a/examples/jumbotron/books.html
+++ b/examples/jumbotron/books.html
@@ -33,6 +33,11 @@
 
   <body>
 
-    <h2></h2>
+    <h2>Moje ulubione książki:</h2>
+	<ul>
+	<li>Janko muzykankt</li>
+	<li>Pan Tadeusz</li>
+	<li>Harry Potter</li>
+	</ul>
   </body>
 </html>
